--- a/index_1.html
+++ b/index_1.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/private.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   </head> 
   <body>
@@ -778,7 +779,7 @@
       </div>    
       <div class="container contact-content">
         <div class="row">
-          <div class="col-md-6 col-xs-6">
+          <div class="col-md-6">
             <h2 class="title">
               Для каждого клиента<br> 
               мы подготавливаем <span>видеоотчет<br> 
@@ -789,7 +790,7 @@
               <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#videoModal"></button>
             </div>
           </div>
-          <div class="col-md-6 col-xs-6">
+          <div class="col-md-6">
             <h2 class="title"><span>Запишитесь на просмотр</span><br> строящихся объекто</h2>
             <p class="slogan">Менеджер свяжется с вами в течение 10 минут!</p>
 
@@ -803,7 +804,7 @@
               <button class="form-btn">Отправить заявку</button>
             </form>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-12 no-relative">
             <div class="line-text">или</div>
           </div>
         </div>
